Account for grl_tracker_per_device_source while looking up the GrlTrackerSource

We will never find a GrlTrackerSource corresponding to any tracker data source if we are
using a catch all (not per device) source. In that case we simply try to find the one
and only source we have and use it for notifications.

https://bugzilla.gnome.org/show_bug.cgi?id=691717